# fs-cone-kit

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
configs/: config.yaml
configs/dataset/: fsoco.yaml
configs/logger/: gitlab.yaml  wandb.yaml
configs/metric/: fitness.yaml  learning_rates.yaml  train_losses.yaml  validation.yaml
configs/trainer/: ultralytics.yaml
core/: train.py
core/data/: base.py  fsoco.py
core/loggers/: base.py  gitlab_mlflow.py  wandb.py
core/metrics/: __init__.py  base.py  mixins.py  ultralytics.py
core/trainers/: base.py  ultralytics.py
data/fsoco/: setup.py
