[project]
name = "dl-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "mlflow>=3.10.0",
    "onnx>=1.12.0,<2.0.0",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.1.0",
    "tqdm>=4.67.3",
    "ultralytics>=8.4.19",
    "wandb>=0.25.0",
]
